--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- header section start -->
   <!-- nav section -->
   <div class="main-header">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top w-100 m-0 p-0">
       <div class="container text-capitalize p-2" style="z-index: 99;">
         <a class="navbar-brand text-white logo" href="#">asraf</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
